handle userId and shorten error messages
Signed-off-by: Mathieu DEHARBE <mathieu.deharbe@rte-france.com>